--- a/index.html
+++ b/index.html
@@ -26,64 +26,67 @@
   <main>
     <section class="news-container">
       <h1 class="news-title">Design de Sistemas Interativos: A Fusão de Habilidades no Mundo Digital</h1>
-      <p class="news-info">Por Luiz Felipe Barbieri, g1 — Brasília <br> 04/12/2024 21h38 - Atualizado há uma hora</p>
-      <img src="img/img-noticia.jpg" alt="Imagem relacionada ao Design de Sistemas Interativos" class="news-image">
-      <p class="news-content">
+      <p class="news-content" style="margin-top: 0px;">
         O design de sistemas interativos é um campo essencial na construção de interfaces que atendem às necessidades humanas de forma eficiente e intuitiva. No livro <strong>Interação Humano-Computador</strong> de David Benyon, o autor apresenta o design de sistemas interativos como uma fusão de habilidades que combina conhecimentos de diversas disciplinas, incluindo psicologia, ciência da computação, design gráfico e engenharia. Este capítulo explora os elementos que formam essa fusão, com ênfase nas práticas que moldam a experiência do usuário em diferentes contextos.
       </p>
-
+      <p class="news-info">Por <strong style="color: var(--cor);">Rafael Miti Yoshiaki Fujii</strong>, FIPP <br> 04/12/2024 21h38 - Atualizado há uma hora</p>
+      <img src="img/img-noticia.jpg" alt="Imagem relacionada ao Design de Sistemas Interativos" class="news-image">
       <div class="news-content">
-        <h2>O Papel do Designer no Mundo Digital</h2>
+        <h2>O Papel do Designer no Mundo Digital</h2><br>
         <p>
           Benyon destaca que o designer de sistemas interativos deve ser uma pessoa multifacetada, capaz de integrar diversas áreas do conhecimento. Isso vai além do simples uso de ferramentas de design; envolve a compreensão das interações humanas, a antecipação de comportamentos e a criação de soluções que respondam aos desafios do usuário.
         </p>
+        <br>
         <p>
           O autor explica que, no design interativo, a chave está em entender como os usuários percebem, interpretam e interagem com a tecnologia. O designer deve ser um facilitador, criando interfaces que sejam intuitivas e que promovam uma experiência agradável e produtiva. Para isso, é necessário um equilíbrio entre estética e funcionalidade.
         </p>
       </div>
 
       <div class="news-content">
-        <h2>Habilidades Essenciais no Design Interativo</h2>
+        <h2>Habilidades Essenciais no Design Interativo</h2><br>
         <ul>
-          <li><strong>Pensamento Centrado no Usuário (UCD):</strong> O designer precisa compreender profundamente as necessidades, comportamentos e limitações dos usuários. O design centrado no usuário garante que o sistema seja acessível, utilizável e relevante para o público-alvo.</li>
-          <li><strong>Prototipagem Rápida e Iteração:</strong> A prototipagem rápida é uma das técnicas mais eficazes para validar ideias de design e obter insights sobre a experiência do usuário.</li>
-          <li><strong>Análise de Feedback e Melhoria Contínua:</strong> O design de sistemas interativos não termina com a entrega do produto. A coleta de feedback contínuo é fundamental para a evolução do design.</li>
+          <li><strong>Pensamento Centrado no Usuário (UCD):</strong> O designer precisa compreender profundamente as necessidades, comportamentos e limitações dos usuários. O design centrado no usuário garante que o sistema seja acessível, utilizável e relevante para o público-alvo.</li><br>
+          <li><strong>Prototipagem Rápida e Iteração:</strong> A prototipagem rápida é uma das técnicas mais eficazes para validar ideias de design e obter insights sobre a experiência do usuário.</li><br>
+          <li><strong>Análise de Feedback e Melhoria Contínua:</strong> O design de sistemas interativos não termina com a entrega do produto. A coleta de feedback contínuo é fundamental para a evolução do design.</li><br>
         </ul>
       </div>
 
       <div class="news-content">
-        <h2>A Abordagem Ecossistêmica</h2>
+        <h2>A Abordagem Ecossistêmica</h2><br>
         <p>
           Um dos conceitos mais interessantes apresentados por Benyon é o de um "ecossistema interativo", no qual diferentes dispositivos e sistemas interagem entre si para oferecer uma experiência integrada e fluida. Exemplos de ecossistemas interativos modernos incluem casas inteligentes, onde luzes, câmeras e dispositivos de entretenimento são controlados por um único sistema de interface.
         </p>
+        <br>
         <p>
           Essa abordagem ecossistêmica sugere que o design interativo deve considerar não apenas o sistema em si, mas como ele se integra ao mundo digital e físico ao redor do usuário. Isso envolve pensar em interfaces que são não apenas funcionais, mas que também se adaptam ao contexto do usuário, oferecendo soluções personalizadas e inteligentes.
         </p>
       </div>
 
       <div class="news-content">
-        <h2>Métodos e Técnicas de Design</h2>
+        <h2>Métodos e Técnicas de Design</h2><br>
         <ul>
-          <li><strong>Personas e Cenários de Uso:</strong> Ferramentas poderosas para representar o público-alvo e os contextos nos quais os sistemas serão utilizados.</li>
-          <li><strong>Wireframes e Protótipos:</strong> Métodos eficazes para visualizar e testar a interação antes de implementar o design final.</li>
+          <li><strong>Personas e Cenários de Uso:</strong> Ferramentas poderosas para representar o público-alvo e os contextos nos quais os sistemas serão utilizados.</li><br>
+          <li><strong>Wireframes e Protótipos:</strong> Métodos eficazes para visualizar e testar a interação antes de implementar o design final.</li><br>
         </ul>
       </div>
 
       <div class="news-content">
-        <h2>Impacto da Tecnologia no Design de Sistemas Interativos</h2>
+        <h2>Impacto da Tecnologia no Design de Sistemas Interativos</h2><br>
         <p>
           À medida que a tecnologia avança, novas ferramentas e abordagens são incorporadas ao design interativo. A inteligência artificial (IA), por exemplo, está revolucionando a forma como os sistemas interativos respondem ao usuário. Interfaces conversacionais e assistentes virtuais são exemplos de como a IA pode ser utilizada para criar interações mais naturais e intuitivas.
         </p>
+        <br>
         <p>
           Além disso, as interfaces imersivas, como as oferecidas pela realidade aumentada (AR) e realidade virtual (VR), estão desafiando os limites tradicionais do design interativo, oferecendo novas formas de interação e experiências únicas.
         </p>
       </div>
 
       <div class="news-content">
-        <h2>Conclusão</h2>
+        <h2>Conclusão</h2><br>
         <p>
           O design de sistemas interativos, conforme descrito por David Benyon, é uma área dinâmica que exige a fusão de habilidades de várias disciplinas. Ao focar no usuário, utilizar prototipagem e análise de feedback, e considerar o contexto mais amplo dos ecossistemas interativos, os designers podem criar interfaces mais eficazes e agradáveis. Com as rápidas inovações tecnológicas, o campo continua a evoluir, exigindo dos designers um constante aprendizado e adaptação.
         </p>
+        <br>
         <p>
           Este livro nos ensina que a criação de sistemas interativos não é apenas uma questão de estética ou funcionalidade, mas de promover uma experiência que seja relevante e significativa para o usuário.
         </p>
